[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
http = { version = "0.2.8" }
tokio = { version = "1.24.2", features = ["full"] }
